# mind_vault_app

./: Cargo.toml  README.md
.github/workflows/: jekyll-gh-pages.yml  pages.yml
core/: Cargo.toml
core/src/: config.rs  lib.rs  models.rs
core/src/db/: config.rs  mod.rs
core/src/repository/: task_repo.rs
docs/: Gemfile  README.md  _config.yml  architecture_overview.md  features.md  getting_started.md  how_to_run.md  implementation.md  index.md  project_layout.md  setup.sh  tech_stack.md  usage_examples.md
docs/_includes/: head.html
docs/_sass/: custom.scss
docs/assets/: README.md  favicon.html  generate_favicon.py  site.webmanifest
docs/assets/css/: style.scss
docs/assets/postman/tasks/: POSTMAN_TESTING_GUIDE.md  Task_Management_API.postman_collection.json  Task_Management_Environment.postman_environment.json
docs/doc_builder/: .layoutIgnore  README.md.template  generate_project_layout.py  readme_builder.py
logs/: mind_vault.2025-07-17.json  mind_vault.2025-07-18.json
mcp/: Cargo.toml
mcp/src/: main.rs  models.rs  utils.rs
mcp/src/tools/: mod.rs  task_tools.rs
mindvault-api/: Cargo.toml
mindvault-api/src/: main.rs  models.rs  response_macro.rs
mindvault-api/src/router/: mod.rs  task_router.rs
mindvault-api/src/services/: task_service.rs
mindvault-core/: Cargo.toml
mindvault-core/src/: db.rs  lib.rs  models.rs  mongo_config.rs
mindvault-core/src/repository/: auto_increment.rs  mod.rs  task_repo.rs
mindvault-mcp/: Cargo.toml
mindvault-mcp/src/: notes_main.rs  tasks_main.rs
mindvault-mcp/src/formatters/: enum_formatters.rs  mod.rs  tasks_formatters.rs
mindvault-mcp/src/models/: mod.rs  task_models.rs
mindvault-mcp/src/tools/: mod.rs  task_tool_handler.rs
mindvault-mcp/src/utils/: db_utils.rs  mcp_utils.rs  mod.rs  tool_metadata.rs
mindvault-shared/: Cargo.toml
mindvault-shared/src/: lib.rs  logger.rs
mindvault-shared/src/dtos/: task_dtos.rs
mindvault-shared/src/models/: mod.rs  tasks_model.rs
mindvault-shared/src/utils/: date_time_serde.rs  mod.rs
mindvault-ui/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
server/src/helpers/: MV.http  mod.rs  task_handlers.rs
server/src/routes/: task_routes.rs
server/src/services/: mod.rs  task_service.rs
server/src/templates/: index.html
shared/: Cargo.toml
shared/src/: formatters.rs  lib.rs  logger.rs
shared/src/models/: mod.rs  task_model.rs
