[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io"] }
tokio = { version = "1.46", features = ["full"] } # For asynchrono
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization (e.g., JSON)
reqwest = { version = "0.12", features = ["json"] }