[package]
name = "mindvault-core"
version = "0.1.0"
edition = "2024"

[lib]
path="./src/lib.rs"

[dependencies]
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0"

# Add MongoDB dependencies
mongodb = "3.2"

# Workspace Projects
mindvault-shared = { path = "../mindvault-shared" }
futures-util = "0.3.31"