[package]
name = "mindvault-core"
version = "0.1.0"
edition = "2024"

[lib]
path="./src/lib.rs"

[dependencies]
tracing = "0.1.41"
thiserror = "2.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
bson = { version = "2.6", features = ["chrono-0_4"] }

# Add MongoDB dependencies
mongodb = "3.2"

# Workspace Projects
mindvault-shared = { path = "../mindvault-shared" }
futures-util = "0.3.31"